--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <footer>Hecho con amor en Platzi </footer>
 
 
-  <script src="./node_modules/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./src/nodes.js"></script>
   <script src="./src/navigation.js"></script>
   <script src="./src/topsecret.js"></script>
